@@ -35,7 +35,7 @@ class MFHelp extends HelpSubCommand {
         List<String> authors = meta.getAuthors();
         int last = authors.size() - 1;
         String authorsString = switch (last) {
-            case 0 -> authors.get(0);
+            case 0 -> authors.getFirst();
             case 1 -> String.join(" and ", authors);
             default -> String.join(", and ", String.join(", ", authors.subList(0, last)), authors.get(last));
         };
